[project]
name = "code-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
