[project]
name = "file-based-code-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.30",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
